# rest-api-perf

./: .gitignore
bench/: bench.sh  make-all-plots.sh  make-plot.R  process-results.py
bench/infrastructure/: main.tf
bench/infrastructure/scripts/: bootstrap.sh
csharp/RestApi/: .dockerignore  Dockerfile  README.md  RestApi.sln  build.sh
csharp/RestApi/RestApi/: Dockerfile  Program.cs  RestApi.csproj  Startup.cs  appsettings.json  skaffold.yaml
csharp/RestApi/k8s/: app.yaml
go/: chi-rest-api  gin-rest-api  gorilla-rest-api  gramework-rest-api
go/chi-rest-api/: Dockerfile  Gopkg.toml  main.go  skaffold.yaml
go/chi-rest-api/handlers/: values.go
go/chi-rest-api/k8s/: app.yaml
go/chi-rest-api/repositories/: inmemory.go  values.go
go/common/: Gopkg.toml
go/common/domain/: value.go
go/common/repositories/: values.go
go/gin-rest-api/: Dockerfile  Gopkg.toml  README.md  main.go  skaffold.yaml
go/gin-rest-api/handlers/: values.go
go/gin-rest-api/k8s/: app.yaml
go/gin-rest-api/repositories/: inmemory.go  (+1 more)
go/gorilla-rest-api/: Dockerfile  Gopkg.toml  main.go  skaffold.yaml
go/gramework-rest-api/: Dockerfile  Gopkg.toml  main.go  skaffold.yaml
rust/actix-rest-api/: Cargo.toml  Dockerfile  skaffold.yaml
rust/hyper-rest-api/: Cargo.toml  Dockerfile  skaffold.yaml
rust/hyper-rest-api/k8s/: app.yaml
rust/hyper-rest-api/src/: main.rs  service.rs
rust/hyper-rest-api/src/repositories/: inmemory.rs  mod.rs  mongo.rs
rust/rest_api_common/: Cargo.toml
rust/rocket-rest-api/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  skaffold.yaml
(+23 files in other folders)
