[package]
name = "hyper-rest-api"
version = "0.1.0"
authors = ["Victor Jimenez <betabandido@gmail.com>"]

[dependencies]
hyper = "0.12"
futures = "0.1"
lazy_static = "1.2"
mongodb = "0.3"
parking_lot = "0.7"
pretty_env_logger = "0.2"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
