[package]
name = "hyper_rest_api"
version = "0.1.0"
authors = ["Victor Jimenez <betabandido@gmail.com>"]

[dependencies]
hyper = "0.12"
futures = "0.1"
lazy_static = "1.3"
parking_lot = "0.8"
pretty_env_logger = "0.3"
regex = "1.1"
rest_api_common = { git = "https://github.com/betabandido/rest-api-perf" }
serde = "1.0"
serde_json = "1.0"
